--- a/app/components/flit/scaffold_component.html.erb
+++ b/app/components/flit/scaffold_component.html.erb
@@ -1,4 +1,10 @@
+<% unless Rails.env == 'production' %>
+  <!-- Scaffold -->
+<% end %>
 <div>Flit::Scaffold - </div>
 <%= render @app_bar %>
 <%= render @body %>
 <div> - Flit::Scaffold</div>
+<% unless Rails.env == 'production' %>
+  <!-- /Scaffold -->
+<% end %>
