Add wrappers for debugging

--- a/app/components/flit/align_component.html.erb
+++ b/app/components/flit/align_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- Align -->
+<% end %>
 <div>Add Flit::Align template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /Align -->
+<% end %>
