--- a/app/components/flit/animated_align_component.html.erb
+++ b/app/components/flit/animated_align_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- AnimatedAlign -->
+<% end %>
 <div>Add Flit::AnimatedAlign template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /AnimatedAlign -->
+<% end %>
