--- a/app/components/flit/animated_container_component.html.erb
+++ b/app/components/flit/animated_container_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- AnimatedContainer -->
+<% end %>
 <div>Add Flit::AnimatedContainer template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /AnimatedContainer -->
+<% end %>
