--- a/app/components/flit/animated_opacity_component.html.erb
+++ b/app/components/flit/animated_opacity_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- AnimatedOpacity -->
+<% end %>
 <div>Add Flit::AnimatedOpacity template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /AnimatedOpacity -->
+<% end %>
