--- a/app/components/flit/animated_padding_component.html.erb
+++ b/app/components/flit/animated_padding_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- AnimatedPadding -->
+<% end %>
 <div>Add Flit::AnimatedPadding template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /AnimatedPadding -->
+<% end %>
