--- a/app/components/flit/animated_positioned_component.html.erb
+++ b/app/components/flit/animated_positioned_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- AnimatedPositionedComponent -->
+<% end %>
 <div>Add Flit::AnimatedPositioned template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /AnimatedPositionedComponent -->
+<% end %>
