--- a/app/components/flit/animated_size_component.html.erb
+++ b/app/components/flit/animated_size_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- AnimatedSize -->
+<% end %>
 <div>Add Flit::AnimatedSize template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /AnimatedSize -->
+<% end %>
