--- a/app/components/flit/animated_switcher_component.html.erb
+++ b/app/components/flit/animated_switcher_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- AnimatedSwitcher -->
+<% end %>
 <div>Add Flit::AnimatedSwitcher template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /AnimatedSwitcher -->
+<% end %>
