--- a/app/components/flit/animated_theme_component.html.erb
+++ b/app/components/flit/animated_theme_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- AnimatedTheme -->
+<% end %>
 <div>Add Flit::AnimatedTheme template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /AnimatedTheme -->
+<% end %>
