--- a/app/components/flit/app_bar_component.html.erb
+++ b/app/components/flit/app_bar_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- AppBar -->
+<% end %>
 <div>Add Flit::AppBar template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /AppBar -->
+<% end %>
