--- a/app/components/flit/asset_image_component.html.erb
+++ b/app/components/flit/asset_image_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- AssetImage -->
+<% end %>
 <div>Add Flit::AssetImage template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /AssetImage -->
+<% end %>
