--- a/app/components/flit/base_component.html.erb
+++ b/app/components/flit/base_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- Base -->
+<% end %>
 <div>Add Flit::Base template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /Base -->
+<% end %>
