--- a/app/components/flit/baseline_component.html.erb
+++ b/app/components/flit/baseline_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- Baseline -->
+<% end %>
 <div>Add Flit::Baseline template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /Baseline -->
+<% end %>
