--- a/app/components/flit/center_component.html.erb
+++ b/app/components/flit/center_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- Center -->
+<% end %>
 <div>Add Flit::Center template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /Center -->
+<% end %>
