--- a/app/components/flit/checkbox_component.html.erb
+++ b/app/components/flit/checkbox_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- Checkbox -->
+<% end %>
 <div>Add Flit::Checkbox template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /Checkbox -->
+<% end %>
