--- a/app/components/flit/clip_oval_component.html.erb
+++ b/app/components/flit/clip_oval_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- ClipOval -->
+<% end %>
 <div>Add Flit::ClipOval template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /ClipOval -->
+<% end %>
