--- a/app/components/flit/clip_path_component.html.erb
+++ b/app/components/flit/clip_path_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- ClipPath -->
+<% end %>
 <div>Add Flit::ClipPath template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /ClipPath -->
+<% end %>
