--- a/app/components/flit/clip_rect_component.html.erb
+++ b/app/components/flit/clip_rect_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- ClipRect -->
+<% end %>
 <div>Add Flit::ClipRect template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /ClipRect -->
+<% end %>
