--- a/app/components/flit/clip_rrect_component.html.erb
+++ b/app/components/flit/clip_rrect_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- ClipRrect -->
+<% end %>
 <div>Add Flit::ClipRrect template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /ClipRrect -->
+<% end %>
