--- a/app/components/flit/column_component.html.erb
+++ b/app/components/flit/column_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- Column -->
+<% end %>
 <div>Add Flit::Column template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /Column -->
+<% end %>
