--- a/app/components/flit/conditional_component.html.erb
+++ b/app/components/flit/conditional_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- Conditional -->
+<% end %>
 <div>Add Flit::Conditional template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- Conditional -->
+<% end %>
