--- a/app/components/flit/container_component.html.erb
+++ b/app/components/flit/container_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- Container -->
+<% end %>
 <div>Add Flit::Container template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /Container -->
+<% end %>
