--- a/app/components/flit/custom_scroll_view_component.html.erb
+++ b/app/components/flit/custom_scroll_view_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- CustomScrollView -->
+<% end %>
 <div>Add Flit::CustomScrollView template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /CustomScrollView -->
+<% end %>
