--- a/app/components/flit/dropdown_button_form_field_component.html.erb
+++ b/app/components/flit/dropdown_button_form_field_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- DropdownButtonFormField -->
+<% end %>
 <div>Add Flit::DropdownButtonFormField template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /DropdownButtonFormField -->
+<% end %>
