--- a/app/components/flit/dynamic_component.html.erb
+++ b/app/components/flit/dynamic_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- Dynamic -->
+<% end %>
 <div>Add Flit::Dynamic template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- Dynamic -->
+<% end %>
