--- a/app/components/flit/elevated_button_component.html.erb
+++ b/app/components/flit/elevated_button_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- ElevatedButton -->
+<% end %>
 <div>Add Flit::ElevatedButton template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /ElevatedButton -->
+<% end %>
