--- a/app/components/flit/expanded_component.html.erb
+++ b/app/components/flit/expanded_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- Expanded -->
+<% end %>
 <div>Add Flit::Expanded template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /Expanded -->
+<% end %>
