--- a/app/components/flit/fitted_box_component.html.erb
+++ b/app/components/flit/fitted_box_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- FittedBox -->
+<% end %>
 <div>Add Flit::FittedBox template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /FittedBox -->
+<% end %>
