--- a/app/components/flit/flexible_component.html.erb
+++ b/app/components/flit/flexible_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- Flexible -->
+<% end %>
 <div>Add Flit::Flexible template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /Flexible -->
+<% end %>
