--- a/app/components/flit/floating_action_button_component.html.erb
+++ b/app/components/flit/floating_action_button_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- FloatingActionButton -->
+<% end %>
 <div>Add Flit::FloatingActionButton template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /FloatingActionButton -->
+<% end %>
