--- a/app/components/flit/form_component.html.erb
+++ b/app/components/flit/form_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- Form -->
+<% end %>
 <div>Add Flit::Form template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /Form -->
+<% end %>
