--- a/app/components/flit/fractional_translation_component.html.erb
+++ b/app/components/flit/fractional_translation_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- FractionalTranslation -->
+<% end %>
 <div>Add Flit::FractionalTranslation template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /FractionalTranslation -->
+<% end %>
