--- a/app/components/flit/fractionally_sized_component.html.erb
+++ b/app/components/flit/fractionally_sized_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- FractionallySized -->
+<% end %>
 <div>Add Flit::FractionallySized template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /FractionallySized -->
+<% end %>
