--- a/app/components/flit/gesture_detector_component.html.erb
+++ b/app/components/flit/gesture_detector_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- GestureDetector -->
+<% end %>
 <div>Add Flit::GestureDetector template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- GestureDetector -->
+<% end %>
