--- a/app/components/flit/grid_view_component.html.erb
+++ b/app/components/flit/grid_view_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- GridView -->
+<% end %>
 <div>Add Flit::GridView template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /GridView -->
+<% end %>
