--- a/app/components/flit/hero_component.html.erb
+++ b/app/components/flit/hero_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- Hero -->
+<% end %>
 <div>Add Flit::Hero template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /Hero -->
+<% end %>
