--- a/app/components/flit/icon_button_component.html.erb
+++ b/app/components/flit/icon_button_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- IconButton -->
+<% end %>
 <div>Add Flit::IconButton template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /IconButton -->
+<% end %>
