--- a/app/components/flit/icon_component.html.erb
+++ b/app/components/flit/icon_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- Icon -->
+<% end %>
 <div>Add Flit::Icon template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /Icon -->
+<% end %>
