--- a/app/components/flit/ignore_pointer_component.html.erb
+++ b/app/components/flit/ignore_pointer_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- IgnorePointer -->
+<% end %>
 <div>Add Flit::IgnorePointer template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /IgnorePointer -->
+<% end %>
