--- a/app/components/flit/indexed_stack_component.html.erb
+++ b/app/components/flit/indexed_stack_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- IndexedStack -->
+<% end %>
 <div>Add Flit::IndexedStack template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /IndexedStack -->
+<% end %>
