--- a/app/components/flit/ink_well_component.html.erb
+++ b/app/components/flit/ink_well_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- InkWell -->
+<% end %>
 <div>Add Flit::InkWell template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /InkWell -->
+<% end %>
