--- a/app/components/flit/input_error_component.html.erb
+++ b/app/components/flit/input_error_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- InputError -->
+<% end %>
 <div>Add Flit::InputError template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /InputError -->
+<% end %>
