--- a/app/components/flit/interactive_viewer_component.html.erb
+++ b/app/components/flit/interactive_viewer_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- InteractiveViewer -->
+<% end %>
 <div>Add Flit::InteractiveViewer template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /InteractiveViewer -->
+<% end %>
