--- a/app/components/flit/intrinsic_height_component.html.erb
+++ b/app/components/flit/intrinsic_height_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- IntrinsicHeight -->
+<% end %>
 <div>Add Flit::IntrinsicHeight template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /IntrinsicHeight -->
+<% end %>
