--- a/app/components/flit/intrinsic_width_component.html.erb
+++ b/app/components/flit/intrinsic_width_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- IntrinsicWidth -->
+<% end %>
 <div>Add Flit::IntrinsicWidth template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /IntrinsicWidth -->
+<% end %>
