--- a/app/components/flit/limited_box_component.html.erb
+++ b/app/components/flit/limited_box_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- LimitedBox -->
+<% end %>
 <div>Add Flit::LimitedBox template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- LimitedBox -->
+<% end %>
