--- a/app/components/flit/linear_progress_indicator_component.html.erb
+++ b/app/components/flit/linear_progress_indicator_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- LinearProgressIndicator -->
+<% end %>
 <div>Add Flit::LinearProgressIndicator template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /LinearProgressIndicator -->
+<% end %>
