--- a/app/components/flit/list_tile_component.html.erb
+++ b/app/components/flit/list_tile_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- ListTile -->
+<% end %>
 <div>Add Flit::ListTile template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- ListTile -->
+<% end %>
