--- a/app/components/flit/list_view_component.html.erb
+++ b/app/components/flit/list_view_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- ListView -->
+<% end %>
 <div>Add Flit::ListView template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /ListView -->
+<% end %>
