--- a/app/components/flit/memory_image_component.html.erb
+++ b/app/components/flit/memory_image_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- MemoryImage -->
+<% end %>
 <div>Add Flit::MemoryImage template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /MemoryImage -->
+<% end %>
