--- a/app/components/flit/network_image_component.html.erb
+++ b/app/components/flit/network_image_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- NetworkImage -->
+<% end %>
 <div>Add Flit::NetworkImage template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /NetworkImage -->
+<% end %>
