--- a/app/components/flit/offstage_component.html.erb
+++ b/app/components/flit/offstage_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- Offstage -->
+<% end %>
 <div>Add Flit::Offstage template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /Offstage -->
+<% end %>
