--- a/app/components/flit/opacity_component.html.erb
+++ b/app/components/flit/opacity_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- Opacity -->
+<% end %>
 <div>Add Flit::Opacity template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /Opacity -->
+<% end %>
