--- a/app/components/flit/outlined_button_component.html.erb
+++ b/app/components/flit/outlined_button_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- OutlinedButton -->
+<% end %>
 <div>Add Flit::OutlinedButton template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /OutlinedButton -->
+<% end %>
