--- a/app/components/flit/overflow_box_component.html.erb
+++ b/app/components/flit/overflow_box_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- OverflowBox -->
+<% end %>
 <div>Add Flit::OverflowBox template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /OverflowBox -->
+<% end %>
