--- a/app/components/flit/padding_component.html.erb
+++ b/app/components/flit/padding_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- Padding -->
+<% end %>
 <div>Add Flit::Padding template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /Padding -->
+<% end %>
