--- a/app/components/flit/placeholder_component.html.erb
+++ b/app/components/flit/placeholder_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- Placeholder -->
+<% end %>
 <div>Add Flit::Placeholder template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /Placeholder -->
+<% end %>
