--- a/app/components/flit/popup_menu_button_component.html.erb
+++ b/app/components/flit/popup_menu_button_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- PopupMenuButton -->
+<% end %>
 <div>Add Flit::PopupMenuButton template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /PopupMenuButton -->
+<% end %>
