--- a/app/components/flit/positioned_component.html.erb
+++ b/app/components/flit/positioned_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- Positioned -->
+<% end %>
 <div>Add Flit::Positioned template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /Positioned -->
+<% end %>
