--- a/app/components/flit/primary_scroll_container_component.html.erb
+++ b/app/components/flit/primary_scroll_container_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- PrimaryScrollContainer -->
+<% end %>
 <div>Add Flit::PrimaryScrollContainer template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /PrimarycrollContainer -->
+<% end %>
