--- a/app/components/flit/radio_component.html.erb
+++ b/app/components/flit/radio_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- RadioComponent -->
+<% end %>
 <div>Add Flit::Radio template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /RadioComponent -->
+<% end %>
