--- a/app/components/flit/rich_text_component.html.erb
+++ b/app/components/flit/rich_text_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- RichText -->
+<% end %>
 <div>Add Flit::RichText template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /RichText -->
+<% end %>
