--- a/app/components/flit/row_component.html.erb
+++ b/app/components/flit/row_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- Row -->
+<% end %>
 <div>Add Flit::Row template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /Row -->
+<% end %>
