--- a/app/components/flit/save_context_component.html.erb
+++ b/app/components/flit/save_context_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- SaveContext-->
+<% end %>
 <div>Add Flit::SaveContext template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /SaveContext -->
+<% end %>
