--- a/app/components/flit/scroll_configuration_component.html.erb
+++ b/app/components/flit/scroll_configuration_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- ScrollConfiguration -->
+<% end %>
 <div>Add Flit::ScrollConfiguration template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /ScrollConfiguration -->
+<% end %>
