--- a/app/components/flit/scrollbar_component.html.erb
+++ b/app/components/flit/scrollbar_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- Scrollbar -->
+<% end %>
 <div>Add Flit::Scrollbar template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /Scrollbar -->
+<% end %>
