--- a/app/components/flit/set_default_value_component.html.erb
+++ b/app/components/flit/set_default_value_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- SetDefaultValue -->
+<% end %>
 <div>Add Flit::SetDefaultValue template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /SetDefaultValue -->
+<% end %>
