--- a/app/components/flit/set_value_component.html.erb
+++ b/app/components/flit/set_value_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- SetValue -->
+<% end %>
 <div>Add Flit::SetValue template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /SetValue -->
+<% end %>
