--- a/app/components/flit/single_child_scroll_view_component.html.erb
+++ b/app/components/flit/single_child_scroll_view_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- SingleChildScrollView -->
+<% end %>
 <div>Add Flit::SingleChildScrollView template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /SingleChildScrollView -->
+<% end %>
