--- a/app/components/flit/sized_box_component.html.erb
+++ b/app/components/flit/sized_box_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- SizedBox -->
+<% end %>
 <div>Add Flit::SizedBox template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /SizedBox -->
+<% end %>
