--- a/app/components/flit/sliver_grid_component.html.erb
+++ b/app/components/flit/sliver_grid_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- SliverGrid -->
+<% end %>
 <div>Add Flit::SliverGrid template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /SliverGrid -->
+<% end %>
