--- a/app/components/flit/sliver_list_component.html.erb
+++ b/app/components/flit/sliver_list_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- SliverList -->
+<% end %>
 <div>Add Flit::SliverList template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /SliverList -->
+<% end %>
