--- a/app/components/flit/sliver_padding_component.html.erb
+++ b/app/components/flit/sliver_padding_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- SliverPadding -->
+<% end %>
 <div>Add Flit::SliverPadding template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /SliverPadding -->
+<% end %>
