--- a/app/components/flit/sliver_to_box_adapter_component.html.erb
+++ b/app/components/flit/sliver_to_box_adapter_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- SliverToBoxAdapter -->
+<% end %>
 <div>Add Flit::SliverToBoxAdapter template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /SliverToBoxAdapter -->
+<% end %>
