--- a/app/components/flit/text_component.html.erb
+++ b/app/components/flit/text_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- Text -->
+<% end %>
 <div>Add Flit::Text template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /Text -->
+<% end %>
