--- a/app/components/flit/text_form_field_component.html.erb
+++ b/app/components/flit/text_form_field_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- TextFormField -->
+<% end %>
 <div>Add Flit::TextFormField template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- TextFormField -->
+<% end %>
