--- a/app/components/flit/theme_component.html.erb
+++ b/app/components/flit/theme_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- Theme -->
+<% end %>
 <div>Add Flit::Theme template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /Theme -->
+<% end %>
