--- a/app/components/flit/tooltip_component.html.erb
+++ b/app/components/flit/tooltip_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- Tooltip -->
+<% end %>
 <div>Add Flit::Tooltip template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /Tooltip -->
+<% end %>
