--- a/app/components/flit/tween_animation_component.html.erb
+++ b/app/components/flit/tween_animation_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- TweenAnimation -->
+<% end %>
 <div>Add Flit::TweenAnimation template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /TweenAnimation -->
+<% end %>
