--- a/app/components/flit/animated_cross_fade_component.html.erb
+++ b/app/components/flit/animated_cross_fade_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- AnimatedCrossFade -->
+<% end %>
 <div>Add Flit::AnimatedCrossFade template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /AnimatedCrossFade -->
+<% end %>
