--- a/app/components/flit/animated_default_text_style_component.html.erb
+++ b/app/components/flit/animated_default_text_style_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- AnimatedDefaultTextStyle -->
+<% end %>
 <div>Add Flit::AnimatedDefaultTextStyle template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /AnimatedDefaultTextStyle -->
+<% end %>
