--- a/app/components/flit/animated_physical_model_component.html.erb
+++ b/app/components/flit/animated_physical_model_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- AnimatedPhysicalModel -->
+<% end %>
 <div>Add Flit::AnimatedPhysicalModel template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /AnimatedPhysicalModel -->
+<% end %>
