--- a/app/components/flit/animated_positioned_directional_component.html.erb
+++ b/app/components/flit/animated_positioned_directional_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- AnimatedPositionedDirectional -->
+<% end %>
 <div>Add Flit::AnimatedPositionedDirectional template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /AnimatedPositionedDirectional -->
+<% end %>
