--- a/app/components/flit/aspect_ratio_component.html.erb
+++ b/app/components/flit/aspect_ratio_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- AspectRatio -->
+<% end %>
 <div>Add Flit::AspectRatio template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /AspectRatio -->
+<% end %>
