--- a/app/components/flit/button_bar_component.html.erb
+++ b/app/components/flit/button_bar_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- ButtonBar -->
+<% end %>
 <div>Add Flit::ButtonBar template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /ButtonBar -->
+<% end %>
