--- a/app/components/flit/card_component.html.erb
+++ b/app/components/flit/card_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- Card -->
+<% end %>
 <div>Add Flit::Card template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /Card -->
+<% end %>
