--- a/app/components/flit/circular_progress_indicator_component.html.erb
+++ b/app/components/flit/circular_progress_indicator_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- CircularProgressIndicator -->
+<% end %>
 <div>Add Flit::CircularProgressIndicator template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /CircularProgressIndicator -->
+<% end %>
