--- a/app/components/flit/comment_component.html.erb
+++ b/app/components/flit/comment_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- Comment -->
+<% end %>
 <div>Add Flit::Comment template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /Comment -->
+<% end %>
