--- a/app/components/flit/cupertino_switch_component.html.erb
+++ b/app/components/flit/cupertino_switch_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- CupertinoSwitch -->
+<% end %>
 <div>Add Flit::CupertinoSwitch template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /CupertinoSwitch -->
+<% end %>
