--- a/app/components/flit/directionality_component.html.erb
+++ b/app/components/flit/directionality_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- Directionality -->
+<% end %>
 <div>Add Flit::Directionality template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /Directionality -->
+<% end %>
