--- a/app/components/flit/material_component.html.erb
+++ b/app/components/flit/material_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- Material -->
+<% end %>
 <div>Add Flit::Material template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /Material -->
+<% end %>
