--- a/app/components/flit/safe_area_component.html.erb
+++ b/app/components/flit/safe_area_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- SafeArea -->
+<% end %>
 <div>Add Flit::SafeArea template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /SafeArea -->
+<% end %>
