--- a/app/components/flit/set_scroll_container_component.html.erb
+++ b/app/components/flit/set_scroll_container_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- SetScrollContainer -->
+<% end %>
 <div>Add Flit::SetScrollContainer template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /SetScrollContainer -->
+<% end %>
