--- a/app/components/flit/stack_component.html.erb
+++ b/app/components/flit/stack_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- Stack -->
+<% end %>
 <div>Add Flit::Stack template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /Stack -->
+<% end %>
