--- a/app/components/flit/switch_component.html.erb
+++ b/app/components/flit/switch_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- Switch -->
+<% end %>
 <div>Add Flit::Switch template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /Switch -->
+<% end %>
