--- a/app/components/flit/text_button_component.html.erb
+++ b/app/components/flit/text_button_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- TextButton -->
+<% end %>
 <div>Add Flit::TextButton template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /TextButton -->
+<% end %>
