--- a/app/components/flit/wrap_component.html.erb
+++ b/app/components/flit/wrap_component.html.erb
@@ -1,1 +1,7 @@
+<% unless Rails.env == 'production' %>
+  <!-- Wrap -->
+<% end %>
 <div>Add Flit::Wrap template here</div>
+<% unless Rails.env == 'production' %>
+  <!-- /Wrap -->
+<% end %>
